--- a/file2.html
+++ b/file2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>File2</title>
+<title>praticeFile2</title>
 </head>
 <body>
 
 
-<p>This is the second file in my new Git Repo.</p>
+<p>This is the praticeFile2 second file in my new Git Repo.</p>
 
 </body>
 </html>
