--- a/file3.html
+++ b/file3.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>file3</title>
+<title>praticeFile2</title>
 </head>
 <body>
 
 
-<p>This is the third file in my new Git Repo.</p>
+<p>This is the  praticeFile2 third file in my new Git Repo.</p>
 
 </body>
 </html>
