--- a/file1.html
+++ b/file1.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>File1</title>
+<title>praticeFile2</title>
 </head>
 <body>
 
-<h1>Hello world!</h1>
+<h1>pratice file 2</h1>
 <p>This is the first file in my new Git Repo.</p>
 
 </body>
