--- a/file3.html
+++ b/file3.html
@@ -7,6 +7,20 @@
 
 
 <p>This is the third file in my new Git Repo.</p>
+<p>This </p>
+<p>This is </p>
+<p>This is the </p>
+<p>This is the third </p>
+<p>This is the third file in </p>
+<p>This is the third file in my </p>
+<p>This is the third file in my new </p>
+<p>This is the third file in my new Git</p>
+<p>This is the third file in my new Git Repo.</p>
+
+
+
+
+
 
 </body>
 </html>
