--- a/file3.html
+++ b/file3.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>praticeFile2</title>
+<title>file3</title>
 </head>
 <body>
 
 
-<p>This is the  praticeFile2 third file in my new Git Repo.</p>
+<p>This is the third file in my new Git Repo.</p>
+<p>This </p>
+<p>This is </p>
+<p>This is the </p>
+<p>This is the third </p>
+<p>This is the third file in </p>
+<p>This is the third file in my </p>
+<p>This is the third file in my new </p>
+<p>This is the third file in my new Git</p>
+<p>This is the third file in my new Git Repo.</p>
+
+
+
+
+
 
 </body>
 </html>
