--- a/file1.html
+++ b/file1.html
@@ -4,7 +4,7 @@
 <title>praticeFile2</title>
 </head>
 <body>
-
+<p>sathish is th emost dangerous person in life</p>
 <h1>pratice file 2</h1>
 
 </body>
