--- a/file1.html
+++ b/file1.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>praticeFile2</title>
+
 </head>
 <body>
 <p>sathish is the most most dangerous man in life</p>
-<h1>pratice file 2</h1>
+<p>kongu san is silentkiller man</p>
 
 </body>
 </html>
